--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="twitter:site" content="@sylwiavargas" />
         <!-- facebook preview -->
         <meta property="og:image" content="assets/pic.jpeg" />
-        <meta property="og:title" content="Sylwia Vargas | tech writer" />
+        <meta property="og:https://github.com/ricardo-3/German-Loza.gittitle" content="Sylwia Vargas | tech writer" />
         <meta property="og:description" content="Tech Writing Portfolio" />
         <meta property="og:url" content="https://tech-writer.netlify.app/" />
         <meta property="og:type" content="website">
