--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="header"> PORFOLIO </h2>
             <a href="https://www.imdb.com/name/nm2560140/" target="_blank" class="links">IMDb</a>         
             <a href="https://german254.wixsite.com/bancodeguiones" target="_blank" class="links">BANCO DE GUIONES</a><br>
-        <h2 class="header">TRAILERS </h2><br>
+        <h2 class="header">TRAILERS </h2>
             <a href="https://www.youtube.com/watch?v=fyuyP5uFaPo" target="_blank" class="links">María Marta - El crimen del country</a>
             <a href="https://www.youtube.com/watch?v=9Zz61dXlnKE target="_blank" class="links">El regreso de Lucas</a>
             <a href="https://www.youtube.com/watch?v=S-HSJkSZwBo" target="_blank" class="links">Mundo Alas</a>
