--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <a href="https://www.youtube.com/watch?v=fyuyP5uFaPo" target="_blank" class="links">María Marta - El crimen del country</a>
             <a href="https://www.youtube.com/watch?v=9Zz61dXlnKE target="_blank" class="links">El regreso de Lucas</a>
             <a href="https://www.youtube.com/watch?v=S-HSJkSZwBo" target="_blank" class="links">Mundo Alas</a>
-            <a href="https://www.youtube.com/watch?v=b_h4jM1Bt2Q&t=64s" class="links">Liebig | El documental</a>
+            <a href="https://www.youtube.com/watch?v=b_h4jM1Bt2Q&t=64s" class="links">Liebig - El documental</a>
             <a href="https://www.youtube.com/watch?v=UuMPfj3EDVc" class="links">Fermín glorias del tango</a><br>
         <h2 class="header">Redes Sociales </h2>
         <a href="https://www.linkedin.com/in/germ%C3%A1n-loza-23561008/" target="_blank" class="links">Linkedin</a>
-        <a href="mailto:german254@hotmail.com" target="_blank" class="links">Email - german254@hotmail.com</a>
+        <a href="mailto:german254@hotmail.com" target="_blank" class="links">Email  german254@hotmail.com</a>
         
         <!--<h2 class="header">✨ LECTURES + LABS ✨</h2>
             <a href="https://github.com/reactjs/reactjs.org/blob/aa70dcedc6db07987a814dba2b296cc4c5219860/beta/src/pages/community/acknowledgements.md#react-docs-react-docs" target="_blank" class="links">React Docs: example code and proofreading</a>
