--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
             <a href="https://www.youtube.com/watch?v=K-s01NTIXWY&t=2s" target="_blank" class="links">El regreso de Lucas</a>
             <a href="https://www.youtube.com/watch?v=S-HSJkSZwBo"  target="_blank" class="links">Mundo Alas</a>
             <a href="https://www.youtube.com/watch?v=b_h4jM1Bt2Q&t=64s" class="links">Liebig </a>
-            
-            <a href="https://www.youtube.com/watch?v=UuMPfj3EDVc" class="links">Fermín glorias del tango</a>
-            <a href="https://www.youtube.com/watch?v=axOqk4gzpGg" class="links">Trailer Ricardo Vilca</a><br>
-        <h2 class="header">REDES SOCIALES </h2>
+            <a href="https://www.youtube.com/watch?v=UuMPfj3EDVc" class="links">Fermín</a>
+            <a href="https://www.youtube.com/watch?v=axOqk4gzpGg" class="links">Ricardo Vilca</a><br>
+        <h2 class="header">CONTACTO & EMAIL</h2>
         <a href="https://www.linkedin.com/in/germ%C3%A1n-loza-23561008/" target="_blank" class="links">Linkedin</a>
-        <a href="mailto:220bancodeguiones@gmail.com" target="_blank" class="links">Email  220bancodeguiones@gmail.com</a>
+        <a href="mailto:220bancodeguiones@gmail.com" target="_blank" class="links">220bancodeguiones@gmail.com</a>
         
         <!--<h2 class="header">✨ LECTURES + LABS ✨</h2>
             <a href="https://github.com/reactjs/reactjs.org/blob/aa70dcedc6db07987a814dba2b296cc4c5219860/beta/src/pages/community/acknowledgements.md#react-docs-react-docs" target="_blank" class="links">React Docs: example code and proofreading</a>
