--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="https://www.youtube.com/watch?v=axOqk4gzpGg" class="links">Ricardo Vilca</a><br>
         <h2 class="header">CONTACTO & EMAIL</h2>
         <a href="https://www.linkedin.com/in/germ%C3%A1n-loza-23561008/" target="_blank" class="links">Linkedin</a>
-        <a href="mailto:220bancodeguiones@gmail.com" target="_blank" class="links">220bancodeguiones@gmail.com</a>
+        <a href="mailto:220bancodeguiones@gmail.com" target="_blank" class="links"> 220bancodeguiones@gmail</a>
         
         
         <!--<h2 class="header">✨ LECTURES + LABS ✨</h2>
