--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="profile motto">Guionista / Scriptwriter</h2>
         <!-- Links and Headers-->
         <h2 class="header"> PORFOLIO </h2>
-            <a href="https://www.imdb.com/name/nm2560140/" target="_blank" class="links">IMDb</a>         
+            <a href="https://www.imdb.com/name/nm2560140/" target="_blank" class="links">IMDB</a>         
             
         <h2 class="header">TRAILERS </h2>
             <a href="https://www.youtube.com/watch?v=fyuyP5uFaPo" target="_blank" class="links">María Marta - El crimen del country</a>
